Adding Duplicate img files

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1 style="text-align: center;">Image Tester</h1>
     <h2>jpg</h2>
     <img src="imgs/pexels-pixabay-268533.jpg" alt="jpgLake" width="200" height="200">
+    <img src="imgs/pexels-pixabay-268533.jpg" alt="jpgLake" width="200" height="200">
     <img src="imgs/photo-1541963463532-d68292c34b19.jpg" alt="jpgbook" width="200" height="200">
     </br>
     <h2>jpeg</h2>
